--- a/src/Store/Components/Pages/About.razor
+++ b/src/Store/Components/Pages/About.razor
@@ -5,26 +5,27 @@
 
 <h1>About TinyShop</h1>
 
-<p>Loading page content...</p>
+@if (hasQueryParameters)
+{
+    <p>Query parameters detected: @queryString</p>
+}
+else
+{
+    <p>Welcome to TinyShop - your premier destination for outdoor gear and adventure equipment!</p>
+    <p class="text-muted">Tip: You can add query parameters to this page (e.g., /about?source=navigation) for additional functionality.</p>
+}
 
 @code {
     [Inject]
     private NavigationManager NavigationManager { get; set; } = default!;
 
-    private bool firstRender = true;
+    private bool hasQueryParameters;
+    private string queryString = string.Empty;
 
-    protected override void OnAfterRender(bool firstRender)
+    protected override void OnInitialized()
     {
-        if (firstRender)
-        {
-            this.firstRender = false;
-            var uri = new Uri(NavigationManager.Uri);
-            var queryString = uri.Query;
-
-            if (string.IsNullOrEmpty(queryString))
-            {
-                throw new InvalidOperationException("This page requires query parameters to function properly. Please add some query parameters to the URL (e.g., ?param=value)");
-            }
-        }
+        var uri = new Uri(NavigationManager.Uri);
+        queryString = uri.Query;
+        hasQueryParameters = !string.IsNullOrEmpty(queryString);
     }
 }
