--- a/src/Store/Components/Layout/NavMenu.razor
+++ b/src/Store/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">TinyShop</a>
+        <ThemeToggle />
     </div>
 </div>
 
