--- a/src/Store/Components/Layout/NavMenu.razor.css
+++ b/src/Store/Components/Layout/NavMenu.razor.css
@@ -18,10 +18,20 @@
 .top-row {
     height: 3.5rem;
     background-color: rgba(0,0,0,0.4);
+    display: flex;
+    align-items: center;
+}
+
+.top-row .container-fluid {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .navbar-brand {
     font-size: 1.1rem;
+    margin: 0;
 }
 
 .bi {
